# ooceapps

./: .gitignore  .travis.yml  AUTHORS  CHANGES  COPYRIGHT  Makefile.am  Makefile.in  PERL_MODULES  README.md  configure  configure.ac  cpanfile
.github/workflows/: release.yml  unit-tests.yaml
etc/: Makefile.am  Makefile.in  fenix.conf.dist  ooceapps.conf.dist
lib/: Fenix.pm  OOCEapps.pm
lib/Fenix/: Utils.pm
lib/Fenix/Controller/: Hooks.pm
lib/Fenix/Model/: IRC.pm
lib/Fenix/Model/Handler/: Help.pm  Hi.pm  Issue.pm  base.pm
lib/Fenix/Model/Handler/Issue/: Gerrit.pm  GitHub.pm  IPD.pm  Illumos.pm  Joyent.pm  OpenSolaris.pm  SmartOS.pm  XXARC.pm  base.pm
lib/OOCEapps/: Mattermost.pm  Utils.pm
lib/OOCEapps/Controller/: Cowsay.pm  Invoice.pm  Issue.pm  Log.pm  Man.pm  PKGstat.pm  PSS.pm  Patron.pm  PkgDep.pm  PkgStat.pm  PkgUpd.pm  RelSuffix.pm  base.pm
lib/OOCEapps/Issue/: Illumos.pm  Joyent.pm  base.pm
lib/OOCEapps/Model/: Cowsay.pm  Invoice.pm  Issue.pm  Log.pm  Man.pm  PKGstat.pm  PSS.pm  Patron.pm  PkgDep.pm  PkgStat.pm  PkgUpd.pm  RelSuffix.pm  base.pm
lib/OOCEapps/Module/: PKGstat.pm  base.pm
lib/OOCEapps/PkgUpd/: ACPIca.pm  AMDuc.pm  Ant.pm  Apache.pm  Autogen.pm  BDWgc.pm  Bash.pm  Bmake.pm  Byobu.pm  Dav1d.pm  Dbus.pm  GCC.pm  GNU.pm  GitHub.pm  GitLab.pm  Gnome.pm  GnuPG.pm  Go.pm  Groovy.pm  Htop.pm  ISC.pm  ImageMagick.pm  Iozone.pm  JDK.pm  Joe.pm  LLVM.pm  LibDBUS.pm  MariaDB.pm  Mattermost.pm  Mozilla.pm  Munin.pm  NCurses.pm  NTFS3g.pm  Nasm.pm  NodeJS.pm  OpenSSL.pm  PV.pm  Perl.pm  Postgresql.pm  PrettyTable.pm  (+17 more)
templates/invoice/: invoice.tex.ep  quote.tex.ep
templates/invoice/mail/: invoice_created.txt.ep  invoice_requested.html.ep  invoice_requested.txt.ep  quote_created.txt.ep  quote_requested.html.ep  quote_requested.txt.ep
templates/man/: multiSection.html.ep
templates/patron/: cancelSubscription.html.ep  cancelSubscriptionForm.html.ep
templates/patron/mail/: charge.failed.subject.txt.ep  charge.failed.txt.ep  charge.succeeded.subject.txt.ep  charge.succeeded.txt.ep  customer.subscription.created.subject.txt.ep  customer.subscription.created.txt.ep  customer.subscription.deleted.subject.txt.ep  customer.subscription.deleted.txt.ep  invoice.upcoming.subject.txt.ep  invoice.upcoming.txt.ep
